src/objects/Insurance__c.object
<CustomObject>
    <description>This object will hold all information related to an Applicant&apos;s insurance information to cover for loss</description>
    <fields>
        <fullName>Application__c</fullName>
        <description>Field associates the Insurance record to the appropriate Application record</description>
        <inlineHelpText>Application related to this Insurance record</inlineHelpText>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Insurance</relationshipLabel>
        <relationshipName>Insurance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Insurance_Agent_Name__c</fullName>
        <label>Insurance Agent Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Agent_Phone_Number__c</fullName>
        <label>Insurance Agent Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Insurance_Claim_Final__c</fullName>
        <label>Insurance Claim Final</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance_Company_Name__c</fullName>
        <label>Insurance Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Policy_Number__c</fullName>
        <label>Insurance Policy Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Recovery_Amount__c</fullName>
        <label>Insurance Recovery Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Recovery_for_Real_Estate_Final__c</fullName>
        <formula>IF(ISPICKVAL(Insurance_Claim_Final__c , &apos;YES&apos;), &apos;YES&apos;, &apos;NO&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insurance Recovery for Real Estate Final</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Reimbursement_amount_for_Auto__c</fullName>
        <label>Insurance Reimbursement amount for Auto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Reimbursement_for_Auto__c</fullName>
        <label>Insurance Reimbursement for Auto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Reimbursement_for_Contents__c</fullName>
        <label>Insurance Reimbursement for Contents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Reimbursement_for_Real_Estate__c</fullName>
        <label>Insurance Reimbursement for Real Estate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Total_Reimbursement__c</fullName>
        <description>Sum reimbursement amount for motor, contents, and real estate.</description>
        <formula>Insurance_Reimbursement_for_Auto__c +  Insurance_Reimbursement_for_Contents__c +  Insurance_Reimbursement_for_Real_Estate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insurance Total Reimbursement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates the Insurance record to the corresponding Loan record</description>
        <inlineHelpText>Associates the Insurance record to the corresponding Loan record</inlineHelpText>
        <label>Loan</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipLabel>Insurance</relationshipLabel>
        <relationshipName>Insurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Insurance</relationshipLabel>
        <relationshipName>Insurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Reimbursement_Insurance_Amount__c</fullName>
        <description>Sum reimbursement amount for motor, contents, and real estate.</description>
        <formula>Insurance_Reimbursement_amount_for_Auto__c +  Insurance_Reimbursement_for_Contents__c +  Insurance_Reimbursement_for_Real_Estate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Reimbursement Insurance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Insurance_Coverage__c</fullName>
        <label>Type of Insurance Coverage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Homeowner&apos;s</fullName>
                </value>
                <value>
                    <fullName>Automobile</fullName>
                </value>
                <value>
                    <fullName>Renter&apos;s</fullName>
                </value>
                <value>
                    <fullName>Flood</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Insurance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Insurance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance</pluralLabel>
    <recordTypes>
        <fullName>Insurance_Record_Type</fullName>
        <active>true</active>
        <description>Master RecordType For Insurance</description>
        <label>Insurance Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Read_Only</fullName>
        <active>true</active>
        <label>Read Only</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>